añadiendo las imagenes correspondientes a la pagina de bumble

--- a/bumble.html
+++ b/bumble.html
@@ -47,7 +47,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-scale-up">
-                <img src="./img/exito/exitocover.png" alt="exito's logo" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/bumble1.jpeg" alt="Bumble's logo" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -92,7 +92,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/r2.jpg" alt="people's seeing a presentation" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/r1.jpg" alt="Bumble's app mockup image" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -110,7 +110,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/userflow.jpg" alt="people painting a white board with markers" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/Bumble.png" alt="people painting a white board with markers" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -145,6 +145,11 @@
                 <p>That post contained a link to a screener survey that filtered people based on certain characteristics.</p>
             </div>
         </div>
+        <section class="au-screenshot">
+            <div class="au-screenshot-preview -lg uk-animation-fade">
+                <img src="./img/bumble/vidagif.gif" alt="woman looking at her cellphone" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+            </div>
+        </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 2%;" uk-grid>
             <div>
                 <div class="uk-card uk-card-body uk-card-small">
