se pusieron los tasks

--- a/bumble.html
+++ b/bumble.html
@@ -150,15 +150,36 @@
                 <img src="./img/bumble/vidagif.gif" alt="woman looking at her cellphone" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
-        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 2%;" uk-grid>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 10%; padding: 0 10px;" uk-grid>
             <div>
                 <div class="uk-card uk-card-body uk-card-small">
                 </div>
             </div>
             <div class="uk-card uk-card-body" id="columna-d" style="margin-left: 4% !important;"> <!-- uk-card-hover-->
-                <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Analyzing results</h1>
-                <p>All the researchers met after these tasks were completed to determine which findings were most relevant.</p>
-                <p>My analysis was based on usability fundamentals and heuristics, so that I could provide an explanation that was not based solely on assumptions. Rather, it was based on previous research conducted by user experience experts.</p>
+                <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Usability Testing</h1>
+                <p>The usability tests were conducted with 7 users (4 men, 3 women) from different regions of Mexico (north and central).</p>
+                            <p>Before starting usability testing we explained how the teleconferencing software program worked and the dynamics of usability testing.</p>
+                            <p>Once with the participant, we proceeded to conduct a brief interview to get a general overview of the participants and their previous experience with dating applications.</p>
+            </div>
+        </div>
+        <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+            <div>
+                <div class="uk-card uk-card-default uk-card-body">
+                    <h3 class="uk-card-title">Default</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-primary uk-card-body">
+                    <h3 class="uk-card-title">Primary</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-secondary uk-card-body">
+                    <h3 class="uk-card-title">Secondary</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
             </div>
         </div>
         <section class="au-screenshot">
