termine de hacer cambios al contenido de bumble.html

--- a/bumble.html
+++ b/bumble.html
@@ -162,32 +162,27 @@
                             <p>Once with the participant, we proceeded to conduct a brief interview to get a general overview of the participants and their previous experience with dating applications.</p>
             </div>
         </div>
-        <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+        <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" style="padding: 10px;" uk-grid>
             <div>
-                <div class="uk-card uk-card-default uk-card-body">
-                    <h3 class="uk-card-title">Default</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="uk-card uk-card-body">
+                    <h3 style="text-align: justify;">Task 1. Make a match with a person of your interest.</h3>
+                    <img src="./img/bumble/task1.png" alt="task 1"/>
                 </div>
             </div>
             <div>
-                <div class="uk-card uk-card-primary uk-card-body">
-                    <h3 class="uk-card-title">Primary</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="uk-card uk-card-body">
+                    <h3 style="text-align: justify;">Task 2. Switch from Date mode to Bizz mode.</h3>
+                    <img src="./img/bumble/task2_2.png" alt="task 2"/>
                 </div>
             </div>
             <div>
-                <div class="uk-card uk-card-secondary uk-card-body">
-                    <h3 class="uk-card-title">Secondary</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="uk-card uk-card-body">
+                    <h3 style="text-align: justify;">Task 3. Access information related to premium plans</h3>
+                    <img src="./img/bumble/task3_2.png" alt="task 3"/>
                 </div>
             </div>
         </div>
-        <section class="au-screenshot">
-            <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/together.jpg" alt="people sitting together" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
-            </div>
-        </section>
-        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
+        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 10%;" uk-grid>
             <div>
                 <div class="uk-card uk-card-body uk-card-small">
                 </div>
@@ -204,7 +199,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/learn.jpg" alt="inspirational quote: go up and never" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/bumble5.png" alt="people sitting together" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -216,14 +211,13 @@
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
                 <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Takeaways</h1>
                 <h2 style="margin-left: -9% !important;">Impact</h2>
-                <p>These problems could cause the image of the company or its website to be affected by the user's experience during their stay on the website.</p>
+                <p>I have noticed that some of the plan information in the app has changed since we shared the results with Bumble staff.</p>
                 <h2 style="margin-left: -9% !important;">I learned to:</h2>
                 <p> 
                     <ul>
-                        <li>Do an expert evaluation</li>
-                        <!--
-                        <li>Value and respect the ideas of the members of a team and work together as a team.</li>-->
-                        <li>Develop detailed reports based on scientific research and learned from people who were internationally recognized as UX designers</li>
+                        <li>Generate empathy during usability testing.</li>
+                        <li>Generate behavioral patterns</li>
+                        <li>Recruit people in different social networks.</li>
                     </ul>
                 </p>
                 <div class="au-report">
