añadi mas informacion sobre las imagenes

--- a/bumble.html
+++ b/bumble.html
@@ -166,19 +166,19 @@
             <div>
                 <div class="uk-card uk-card-body">
                     <h3 style="text-align: justify;">Task 1. Make a match with a person of your interest.</h3>
-                    <img src="./img/bumble/task1.png" alt="task 1"/>
+                    <img src="./img/bumble/task1.png" alt="task 1: person matching with other person on the app"/>
                 </div>
             </div>
             <div>
                 <div class="uk-card uk-card-body">
                     <h3 style="text-align: justify;">Task 2. Switch from Date mode to Bizz mode.</h3>
-                    <img src="./img/bumble/task2_2.png" alt="task 2"/>
+                    <img src="./img/bumble/task2_2.png" alt="task 2: Person switching from date to bizz mode on the Bumble app"/>
                 </div>
             </div>
             <div>
                 <div class="uk-card uk-card-body">
                     <h3 style="text-align: justify;">Task 3. Access information related to premium plans</h3>
-                    <img src="./img/bumble/task3_2.png" alt="task 3"/>
+                    <img src="./img/bumble/task3_2.png" alt="task 3: Photo about the information of different plans on premium in the app"/>
                 </div>
             </div>
         </div>
