cambios en la manera que se presentaron los main findings + results en el bumble.html y cambie info sobre el impacto de dicho proyecto

--- a/bumble.html
+++ b/bumble.html
@@ -47,7 +47,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-scale-up">
-                <img src="./img/bumble/bumble1.jpeg" alt="Bumble's logo" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/bumble1.jpeg" alt="Bumble's mockup app" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -92,7 +92,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/bumble/r1.jpg" alt="Bumble's app mockup image" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/r1.jpg" alt="Eyeglasses on a book " style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -110,7 +110,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/bumble/Bumble.png" alt="people painting a white board with markers" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/Bumble.png" alt="Someone's hand with Bumble's mockup app" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -182,24 +182,25 @@
                 </div>
             </div>
         </div>
-        <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 10%;" uk-grid>
+        <div class="uk-child-width-1-2@m uk-grid-small uk-grid-match" style="padding: 10px; margin-top: 8%; margin-left: 4% !important; margin-bottom: -3%;" uk-grid>
             <div>
-                <div class="uk-card uk-card-body uk-card-small">
-                </div>
+                <div class="uk-card uk-card-body">
+                    <h1 style=" margin-bottom: 1%; margin-left: -9.5% !important;">Main Findings</h1>
+                    <p>Finally, based on the information collected, we carried out an analysis through a grouping and identification of patterns, complemented by a series of discussions that allowed us to make sense of the different findings.                
+                    </div>
             </div>
-            <div class="uk-card uk-card-body" id="columna-d" style="margin-left: 4% !important;"> <!-- uk-card-hover-->
-                <h1 style="padding: 0 1% !important;  margin-bottom: 1%;">Main Findings</h1>
-                <p>Finally, based on the information collected, we carried out an analysis through a grouping and identification of patterns, complemented by a series of discussions that allowed us to make sense of the different findings.                
-                </p>
-                <h1 style=" margin-bottom: 1%; margin-left: -9% !important;">Results</h1>
-                <p>
-                  The usability problems could be recognized in the following screens: home page, product search and selection, and payment, which show that the interface lacks some basics of user-centered design. This may affect the way in which users perform their tasks and the fulfillment of their objectives within the online store.
-                </p>
+            <div>
+                <div class="uk-card uk-card-body">
+                    <h1 style=" margin-bottom: 1%; margin-left: -9.5% !important;">Results</h1>
+                    <p>
+                        The usability problems could be recognized in the following screens: home page, product search and selection, and payment, which show that the interface lacks some basics of user-centered design. This may affect the way in which users perform their tasks and the fulfillment of their objectives within the online store.
+                      </p>                
+                </div>
             </div>
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/bumble/bumble5.png" alt="people sitting together" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/bumble/bumble5.png" alt="people dancing" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -211,7 +212,7 @@
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
                 <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Takeaways</h1>
                 <h2 style="margin-left: -9% !important;">Impact</h2>
-                <p>I have noticed that some of the plan information in the app has changed since we shared the results with Bumble staff.</p>
+                <p>Since I conducted this research, the way information about the plans is presented to users has changed and this has been very advantageous to the business.</p>
                 <h2 style="margin-left: -9% !important;">I learned to:</h2>
                 <p> 
                     <ul>
