--- a/citizen.html
+++ b/citizen.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/exito.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="icon" href="img/littlebu.png">
-    <title>Falabella vs Ripley- Case Study</title>
+    <title>Citizen Experience - Case Study</title>
   </head>
   <body id="body">
     <div class="uk-section-default uk-background-blend-darken welcome uk-background-fixed uk-background-cover " id="Inicio">
@@ -40,15 +40,15 @@
         </div>
         <div class="uk-child-width-1-1@s uk-animation-fade" uk-grid>
             <div style="margin-top: 4% !important;">
-                <h3>Summative study with unmoderated usability tests</h3>
-                <h1>Falabella vs Ripley</h1>
+                <h3>Expert Evaluation of a website related to</h3>
+                <h1>Citizen Experience</h1>
                 <!--bumble caso de estudio -->
             </div>
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-scale-up" style="object-position: center;">
-                <img src="./img/fripley/coverl.png" alt="Falabella vs ripley cover logo" style="max-width:100%;
-                max-height:100%; position: absolute; display: block; opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform; object-position: center;"/>
+                <img src="./img/citizen/cover.png" alt="Liberty statue illustration" style="max-width:100%;
+                max-height:100%; display: block; opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform; object-position: center;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -58,25 +58,19 @@
                 </div>
             </div>
             <div class="uk-card uk-card-body uk-animation-scale-up" id="columna-d"> <!-- uk-card-hover-->
-                    <p>This case study is about a quantitative summative study conducted in March 2021, where unmoderated usability tests were performed on the websites of the Peruvian e-commerce stores Falabella and Ripley in their desktop version.</p>
-                    <p>Project duration: 3 weeks.</p>
-                    <p>This study was conducted to compare the usability and user experience of these platforms based on a series of specific tasks and objectives, covering both their main online shopping service, as well as other services that both platforms offer within the diversification of their business lines.</p>
-                    <p>Four tasks were assigned to each participant in order to accomplish the objectives of the study. There were 52 participants in total, each randomly assigned to one of two groups.</p>
-                    <p>Team: 6 UX Researchers</p>
-                    <p>My role:  UX Researcher</p>
-                    <p>Responsibilities: </p>
-                    <ul>
-                        <li>Recluting</li>
-                        <li>Evaluator</li>
-                        <li>Design Research</li>
-                        <li>Content Creator</li>
-                    </ul>
-                    <p>Challenges: </p>
-                    <ul>
-                        <li>Recruitment of people for unmoderated testing.</li>
-                        <li>Finding theoretical references to support the findings of the inspection</li>
-                        <li>Interpret the results of the emotions generated in the test and show them graphically using well-founded scientific resources.</li>
-                    </ul>
+                <p>This research aimed to identify whether the website adhered to the Citizens Experience guidelines.</p>
+                <p>Project duration: 1 week.</p>
+                <p>Team: 6 UX Researchers</p>
+                <p>My role:  UX Researcher</p>
+                <p>Responsibilities: </p>
+                <ul>
+                    <li>Expert Evaluator</li>
+                    <li>Design Research</li>
+                </ul>
+                <p>Challenges: </p>
+                <ul>
+                    <li>Find theoretical references to support the findings of the inspection.</li>
+                </ul>
             </div>
         </div>
         <div class="uk-child-width-1-1@s" uk-grid>
@@ -86,7 +80,7 @@
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/bumble/r2.jpg" alt="Eyeglasses on a book " style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/citizen/methodx1.jpg" alt="Woman pointing her finger to a post-it in front of the team" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -97,14 +91,14 @@
             </div>
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
                 <h2 style="padding: 0 1% !important;">Understanding the company and it's audience</h2>
-                <p>The following question guided my use of Éxito website during the day I spent: </p>
+                <p>The following question guided my use of the website during the day I spent: </p>
                 <p>"What would a user want to achieve with a website like this?"</p>
-                <p>Upon doing this research, I analyzed Falabella's and Ripley's competition and also identified the company's value proposition.</p>
+                <p>Upon doing this research, I analyzed the client's competition and also identified the company's value proposition.</p>
             </div>
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/userflow.jpg" alt="Someone's hand with Bumble's mockup app" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/citizen/coverx3.png" alt="White house photo" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%; margin-bottom: -8%;" uk-grid>
@@ -114,57 +108,37 @@
                 </div>
             </div>
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
-                <h2 style="padding: 0 1% !important;">The type of business</h2>
-                <p>Two online stores in Peru were compared using a variety of metrics and instruments that evaluate user performance through a quantitative analysis of user performance.</p>
-                <p>As the case study presented falls into the second category (summative usability tests), we chose to capture numerical data, since it was a comparison of two interfaces (Ripley, Falabella), these variables enabled us to compare the average effort for each task.</p>
-                <p>To obtain the greatest amount of qualitative data, a larger number of participants was required compared to a formative test, and with those data, a statistical analysis could be conducted to compare the results of the two interfaces. </p>
-                <p>In order to calculate this difference, we used the T-test, a statistical test used to compare the measures and averages of two normally distributed samples or groups. It is often used to determine if an item has an effect on the population of interest, or if two groups differ from each other in hypothesis testing.</p>
-                <h3 style="margin-left: -9% !important; margin-bottom: -1%; margin-top: -2%; font-weight: bold;">Instruments</h3>
-                <p>The following instruments were used to obtain quantitative data for measuring usability:</p>
-                <p>
-                    <ol>
-                        <li>Likert Scale. The user is able to indicate how much they agree or disagree with a statement using a five- or seven-point scale.</li>
-                        <li>SUS (System Usability Scale). In 1996, John Brooke created a widely used questionnaire whose aim was to measure user's satisfaction with the usability of systems and digital platforms, based on ten questions with a score from 1 to 5 depending on how much they agree or disagree with each statement.</li>
-                    </ol>
-                </p>
-                <h2 style="margin-left: -9.5% !important;">User's flow</h2>
+                <h2 style="padding: 0 1% !important;">User's flow</h2>
+                <p>The research for this project was based on books by renowned authors in the field of UX Design. </p>
+                <p>The evaluators examined each page individually in order to gain a better understanding of the overall flow and scope of the system.</p>
                 <p>After understanding the user flow, we created tasks that focused on the possible uses of the platform in the daily lives of its users.</p>
-                <p>Tasks:</p>
-                <p>
-                    <ol>
-                        <li>Utilize the search engine to find an Acer Aspire 8GB RAM laptop with an undiscounted price of S/3,199.</li>
-                        <li>Find out the location and hours of operation of the store closest to you.</li>
-                        <li>Search for CMR Visa basic card benefits</li>
-                        <li>Search life insurance Effective credit.</li>
-                    </ol>
-                </p>
             </div>
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/exito/together.jpg" alt="Someone's hand with Bumble's mockup app" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/citizen/otro.jpg" alt="Two persons using a whiteboard to put information about the project" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@m uk-grid-small uk-grid-match" style="padding: 10px; margin-top: 18%; margin-left: 4% !important; margin-bottom: -3%;" uk-grid>
             <div>
                 <div class="uk-card uk-card-body">
                     <h1 style=" margin-bottom: 1%; margin-left: -9.5% !important;">Analyzing results</h1>
-                    <p>For this research, I used different formulas and tools to calculate the corresponding values. Furthermore, I analyzed the resulting graphs of each operation and the graph of users' emotions when they used these platforms.</p>
-                </div>
+                    <p>All the researchers met after these tasks were completed to determine which findings were most relevant.</p>
+                    <p>My analysis was based on usability fundamentals and heuristics, so that I could provide an explanation that was not based solely on assumptions. Rather, it was based on previous research conducted by user experience experts.</p>                </div>
             </div>
             <div>
                 <div class="uk-card uk-card-body">
                     <h1 style=" margin-bottom: 1%; margin-left: -9.5% !important;">Main Findings</h1>
+                    <p>Finally, based on the information collected, we carried out an analysis through a grouping and identification of patterns, complemented by a series of discussions that allowed us to make sense of the different findings.</p>
                     <p>
-                        Falabella website had a 63.64% success rate for tasks compared to Ripley website, which only had 88.46% success rate.
-                        <br>Additionally, falabella website participants took 248.5 seconds to complete the tasks, which was slower than the time taken by users who interacted with Ripley's website (182.70 seconds).
-                       </p>            
+                       One of the principal findings encountered are the following: the search results are classified in terms that do not facilitate understanding and there are variations in the information presented in the documents on the website, these problems could cause the citizen to have difficulties at the time of accessing the required information so that subsequently the relationship with the Citizen would be affected.
+                    </p>          
                 </div>
             </div>
         </div>
         <section class="au-screenshot">
             <div class="au-screenshot-preview -lg uk-animation-fade">
-                <img src="./img/bumble/bumble5.png" alt="people dancing" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
+                <img src="./img/citizen/learn.jpg" alt="Lady's hand using a ruler for a project" style="opacity: 1; transform: translate3d(0px, 17.3095%, 0px); will-change: transform;"/>
             </div>
         </section>
         <div class="uk-child-width-1-2@s uk-grid-match"  style="margin-top: 15%;" uk-grid>
@@ -177,15 +151,15 @@
                 <h1 style="padding: 0 1% !important; margin-bottom: 1%;">Takeaways</h1>
                 <h2 style="margin-left: -9% !important;">Impact</h2>
                 <p>These problems could cause the image of the company or its website to be affected by the user's experience during their stay on the website.</p>
-                <h2 style="margin-left: -9% !important;">I learned to:</h2>
-                <p> 
-                    <ul>
-                        <li>Demonstrate users' emotions with graphs and calculations.</li>
-                    </ul>
-                </p>
+                <h4>I learned to:</h4>
+                        <p> 
+                            <ul>
+                                <li>Make a heuristic evaluation taking into account the inclusion, digital accessibility and citizen experience guidelines.</li>
+                            </ul>
+                        </p>
                 <div class="au-report">
-                    <a class="au-report-link" href="./citizen.html" target="_blank" rel="noopener" data-magnetic>
-                        <span data-text="Launch project">Next Case: Citizen Experience</span>
+                    <a class="au-report-link" href="./15usability.html" target="_blank" rel="noopener" data-magnetic>
+                        <span data-text="Launch project">Next Case: 15 Usability Problems</span>
                     </a>
                 </div>
             </div>
