se modifico el portfolio.html y exito.css (se intento añadir el espacio de margen inferior despues del caso de estudio de 15usab) y se añadio una imagen diferente full de bumble

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
             <!--bumble caso de estudio -->
             <a href="./bumble.html">
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
-                    style="background-image: url(./img/bumblefull.png); margin: 50px; ">
+                    style="background-image: url(./img/bumble/bumblefullx2.png); margin: 50px; ">
                 </div>
             </a>
              <!-- exito-->
@@ -90,7 +90,7 @@
                 </div>
             </a>
             <!-- 15 usability problems-->
-            <a href="./15usability.html" style="margin-bottom: 50px;">
+            <a href="./15usability.html" style="margin-bottom: 150px !important;">
                 <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" 
                 style="background-image: url(./img/15usabcases_small.png); margin: 50px; padding-bottom: 10% !important;" id="15usab">
                     <div class="uk-overlay-primary uk-position-cover"></div>
@@ -111,7 +111,10 @@
         <footer>
             <h1>ayuda por favor</h1>
             <a href="https://www.linkedin.com/in/abrilurena/">Contact</a>
-        </footer>-->
+        </footer>
+        <div class="none" style="color: white; background-color: transparent; max-height: 5%; display:inline-block; padding:10px;">
+            <h5>ayudaaaa</h5>
+        </div>-->
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.40/js/uikit.min.js"></script>
