changes on exito.html

--- a/exito.html
+++ b/exito.html
@@ -117,7 +117,7 @@
             </div>
             <div class="uk-card uk-card-body" id="columna-d"> <!-- uk-card-hover-->
                 <h2 style="padding: 0 1% !important;">User's flow</h2>
-                <p>We used the book Usability Engineering by Jakob Nielsen as a guide to carry out this expert evaluation. The evaluators examined each page individually in order to gain a better understanding of the overall flow and scope of the system.</p>
+                <p>Our work was based on a book by a renowned ux designer as a guide to carry out this expert evaluation. The evaluators examined each page individually in order to gain a better understanding of the overall flow and scope of the system.</p>
                 <p>After understanding the user flow, we created tasks that focused on the possible uses of the platform in the daily lives of its users.</p>
                 <p>Tasks:
                     <ol>
