changed reference links

--- a/original/portfolio.html
+++ b/original/portfolio.html
@@ -15,12 +15,12 @@
             <nav class="uk-navbar-container" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
-                    <li class="uk-active alte-bold "><a href="https://abrilurena.me/" class="inline uk-heading-primary"><img src="img/logo4.png" alt="icono" class="icono"></a></li>
+                    <li class="uk-active alte-bold "><a href="https://abrilurena.com/" class="inline uk-heading-primary"><img src="img/logo4.png" alt="icono" class="icono"></a></li>
                     </ul>
                 </div>
                   <div class="uk-navbar-right ">
                           <ul class="uk-navbar-nav">
-                             <li class="uk-active"><a class="bar-menu" href="https://abrilurena.me/">Home</a></li>
+                             <li class="uk-active"><a class="bar-menu" href="https://abrilurena.com/">Home</a></li>
                              <!-- <li class="uk-active"><a class="bar-menu" href="./curriculumvitae.html" style="text-align: center;">Curriculum Vitae</a></li>
                               <li class="uk-active"><a class="bar-menu" href="./curriculumvitae.html" style="text-align: center;">Grades</a></li>-->
                               <li class="uk-active"><a class="bar-menu" href="./portfolio.html" style="text-align: center;">Portfolio</a>
